crates/rimz/src/sidebar_pane/render/snapshots/rimz__sidebar_pane__render__tests__search_line_typing_no_color.snap
---
source: crates/rimz/src/sidebar_pane/render/tests/mod.rs
expression: screen
---
 ⌘ query-engine

 ◎ 0                ◇ 0 ↘ 0 ↗ 0 ◌ 0
 ¤ 0                          $0.00
 ──────────────────────────────────
 no match
 / auth                         0/0
 ──────────────────────────────────
  W: ◎ 0  ◇ 0 ↘ 0 ↗ 0 ◌ 0     $0.00
  M: ◎ 0  ◇ 0 ↘ 0 ↗ 0 ◌ 0     $0.00

                         ? for help
