crates/rimz/src/sidebar_pane/render/snapshots/rimz__sidebar_pane__render__tests__search_zero_match_folded_footer.snap
---
source: crates/rimz/src/sidebar_pane/render/tests/mod.rs
expression: screen
---
 ⌘ query-engine

 ◎ 0                                  ◇ 0 ↘ 0 ↗ 0 ◌ 0
 ¤ 1                                            $0.00
 ────────────────────────────────────────────────────
 ? 0   ! 0   ⏸︎ 0   ✓ 0                ⢿ 1   ☾ 0   ○ 0

 no match











 ─── Claude ──── Codex ──────────────────────────────
                                             ready
           Claude Max · v2.1.158    ⇅ rc ▀▀▀▀▀▀▀▀▀▀▀▀
  ▐▛███▜▌  ◎ 12  ◇ 498k ◌ 68k      $3.50 ▀▀▀▀▀▀▀▀▀▀▀▀
 ▝▜█████▛▘ <t>  ▰▰▰▰▰▰▰▰▰▰▰▰▱▱▱▱ ↻  <reset> ▀▀▀▀▀▀▀▀▀▀▀▀
   ▘▘ ▝▝   <t>  ▰▰▰▰▰▰▰▰▰▰▱▱▱▱▱▱ ↻  <reset> ▀▀▀▀▀▀▀▀▀▀▀▀
  ── Total: ──────────────────────────── ▀▀▀▀▀▀▀▀▀▀▀▀
  W: ◎ 0                         ◇ 0 ◌ 0 ▀▀▀▀▀▀▀▀▀▀▀▀
  M: ◎ 0                         ◇ 0 ◌ 0 ▀▀▀▀▀▀▀▀▀▀▀▀
  W: $0.00                      M: $0.00 ▀▀▀▀▀▀▀▀▀▀▀▀
 /not-a-match                 ? for help
