crates/rimz/src/sidebar_pane/render/snapshots/rimz__sidebar_pane__render__tests__sleeping_card.snap
---
source: crates/rimz/src/sidebar_pane/render/tests/mod.rs
expression: screen
---
 ⌘ query-engine

 ◎ 0                        ◇ 0 ↘ 0 ↗ 0 ◌ 0
 ¤ 1                                  $0.00
 ──────────────────────────────────────────
 ? 0   ! 0   ⏸︎ 0   ✓ 0      ⢿ 0   ☾ 1   ○ 0

▎⑂ main ┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄🮇
▌☾ claude                                  ▐
▌  wakes in 12m                            ▐
▌  ▢ ────────────────────────────────    0%▐
▌  ▤ 0                                     ▐
▌  ⧖ 1                                     ▐
▌    ◷ timer · in 12m                 ◔ <1m▐

 ──────────────────────────────────────────
  W: ◎ 0  ◇ 0 ↘ 0 ↗ 0 ◌ 0             $0.00
  M: ◎ 0  ◇ 0 ↘ 0 ↗ 0 ◌ 0             $0.00

                                 ? for help
