crates/rimz/src/sidebar_pane/render/snapshots/rimz__sidebar_pane__render__tests__subagent_stats_line.snap
---
source: crates/rimz/src/sidebar_pane/render/tests/mod.rs
expression: screen
---
 ⌘ query-engine

 ◎ 0                                        ◇ 0 ↘ 0 ↗ 0 ◌ 0
 ¤ 1                                                  $0.00
 ──────────────────────────────────────────────────────────
 ? 0   ! 0   ⏸︎ 0   ✓ 0                      ⢿ 1   ☾ 0   ○ 0

 ⑂ main
 ⣾ claude                                             $0.42
   delegate
   ▢ ────────────────────────────────────────────────    0%
   ▤ 0
   ⧉ subagents (1)                                    $0.42


 ──────────────────────────────────────────────────────────
  W: ◎ 0  ◇ 0 ↘ 0 ↗ 0 ◌ 0                             $0.00
  M: ◎ 0  ◇ 0 ↘ 0 ↗ 0 ◌ 0                             $0.00

                                                 ? for help
