crates/rimz/src/sidebar_pane/render/snapshots/rimz__sidebar_pane__render__tests__wait_entries.snap
---
source: crates/rimz/src/sidebar_pane/render/tests/mod.rs
expression: screen
---
 ⌘ query-engine

 ◎ 0                                  ◇ 0 ↘ 0 ↗ 0 ◌ 0
 ¤ 1                                            $0.00
 ────────────────────────────────────────────────────
 ? 0   ! 0   ⏸︎ 0   ✓ 0                ⢿ 1   ☾ 0   ○ 0

▎⑂ main ┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄┄🮇
▌⣾ claude                                            ▐
▌  working                                           ▐
▌  ▢ ──────────────────────────────────────────    0%▐
▌  ▤ 0                                               ▐
▌  ⧖ waits (4)                                       ▐
▌    ◷ timer · in 12m                           ◑ <t>▐
▌    ⣾ pid · 16776                              ◔  3m▐
▌    ⣾ command · cargo                          ◔  4m▐
▌      cargo xtask gate --name foo_test              ▐
▌    ⌁ signal · pr.merged                       ●  1h▐


 ────────────────────────────────────────────────────
  W: ◎ 0  ◇ 0 ↘ 0 ↗ 0 ◌ 0                       $0.00
  M: ◎ 0  ◇ 0 ↘ 0 ↗ 0 ◌ 0                       $0.00

                                           ? for help
