crates/rimz/src/sidebar_pane/render/snapshots/rimz__sidebar_pane__render__tests__worktree_equal_to_trunk.snap
---
source: crates/rimz/src/sidebar_pane/render/tests/mod.rs
assertion_line: 103
expression: screen
---
 ⌘ query-engine

 ◎ 0
 ¤ 1
 ────────────────────────────────────
 ? 0   ! 0   ⏸︎ 0   ✓ 0      ⢿ 0   ○ 1

▏⑂ feature-migration ┄┄┄┄┄┄┄┄┄ ≡ main
▌○ codex · 258k
▌  ...



              ? for help
